fix flickering

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,6 +3,7 @@ body {
   font-family: "Cascadia Code";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: linear-gradient(#019875, #33ab5f);
 }
 
 code {
